ORC-611: [C++] Support timestamp statistics with nanosecond